deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-cache-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-cache
  template:
    metadata:
      labels:
        app: app-cache
    spec:
      containers:
        - name: app
          image: episen-sca/app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1337
        - name: cache
          image: episen-sca/cache
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: app-cache-service
spec:
  selector:
    app: app-cache
  ports:
    - name: app
      protocol: TCP
      port: 80
      targetPort: 1337
    - name: cache
      protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
